fix: userScrap가져오는 메소드 쿼리로변경